# Home_work_4

./: README.md  pyproject.toml
htmlcov/: index.html
src/: category.py  main.py  product.py
tests/: test_category.py  test_product.py
